objects/CRM_AudienceCriteriaRefData__c.object
<CustomObject>
    <description>Object to store Reference Data Explicitly for Audience Criteria</description>
    <fields>
        <fullName>CRM_ClinicalServiceLineID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub Service Line related Service Line</description>
        <inlineHelpText>Service Line Lookup</inlineHelpText>
        <label>Clinical Service Line ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CRM_AudienceCriteriaRefData__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Clinical Service Line</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CRM_AudienceCriteriaRefData__c</referenceTo>
        <relationshipName>CRM_ClinicalServiceLineID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_ClinicalServiceLineSyncData__c</fullName>
        <description>This data will be synced with Wunderman</description>
        <externalId>true</externalId>
        <inlineHelpText>This data will be synced with Wunderman</inlineHelpText>
        <label>Clinical Service Line Sync Data</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_ClinicalServiceLine__c</fullName>
        <description>Reference data field to store Clinical Service line</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores service line picklist values for Audience Selection screen.</inlineHelpText>
        <label>Clinical Service Line</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_ClinicalSubServiceLineSyncData__c</fullName>
        <description>This data will be synced with Wunderman</description>
        <externalId>true</externalId>
        <inlineHelpText>This data will be synced with Wunderman</inlineHelpText>
        <label>Clinical Sub Service Line Sync Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ClinicalSubServiceLine__c</fullName>
        <description>Reference data field to store Clinical Sub Service line picklist values.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores Sub Service line picklist values for Audience Selection screen.</inlineHelpText>
        <label>Clinical Sub Service Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Reference data field to activate and deactivate picklist value</description>
        <inlineHelpText>Reference data field to activate and deactivate picklist value</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_ParentClinServLnNm__c</fullName>
        <description>Parent Service Line Name</description>
        <formula>CRM_ClinicalServiceLineID__r.CRM_ClinicalServiceLine__c</formula>
        <inlineHelpText>Parent Service Line Name</inlineHelpText>
        <label>Parent Clinical Service Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ServiceSubServiceLine__c</fullName>
        <description>Reference data field to store service lien and sub service line concatenated value .</description>
        <formula>CRM_ClinicalServiceLineID__r.CRM_ClinicalServiceLine__c + &apos; - &apos;+  CRM_ClinicalSubServiceLine__c</formula>
        <inlineHelpText>Stores service line and sub service line concatenated value</inlineHelpText>
        <label>Service-Sub Service Line</label>
        <type>Text</type>
    </fields>
    <label>Ref Data - Audience Criteria</label>
    <listViews>
        <fullName>Service_Line</fullName>
        <columns>NAME</columns>
        <columns>CRM_ClinicalServiceLine__c</columns>
        <columns>CRM_ClinicalServiceLineSyncData__c</columns>
        <columns>CRM_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_AudienceCriteriaRefData__c.ClinicalServiceLine</value>
        </filters>
        <label>Clinical Service Line</label>
    </listViews>
    <listViews>
        <fullName>Sub_Service_Line</fullName>
        <columns>NAME</columns>
        <columns>CRM_ClinicalSubServiceLine__c</columns>
        <columns>CRM_ClinicalSubServiceLineSyncData__c</columns>
        <columns>CRM_ServiceSubServiceLine__c</columns>
        <columns>CRM_IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRM_AudienceCriteriaRefData__c.ClinicalSubServiceLine</value>
        </filters>
        <label>Clinical Sub Service Line</label>
    </listViews>
    <nameField>
        <displayFormat>CARD-{0000000}</displayFormat>
        <label>Audience Reference Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ref Data - Audience Criteria</pluralLabel>
    <recordTypes>
        <fullName>ClinicalServiceLine</fullName>
        <active>true</active>
        <description>Record Type for Clinical Service Line</description>
        <label>Clinical Service Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>ClinicalSubServiceLine</fullName>
        <active>true</active>
        <description>Record Type for Clinical Sub Service Line</description>
        <label>Clinical Sub Service Line</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RecordTypeChange</fullName>
        <active>true</active>
        <description>Restrict Record Type Change</description>
        <errorConditionFormula>AND (
ISCHANGED( RecordTypeId ) , $Profile.Name!=&apos;System Adminstrator&apos;
)</errorConditionFormula>
        <errorMessage>Record Type Change is not allowed</errorMessage>
    </validationRules>
</CustomObject>